force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/Inactive_Indemnity_Guarantee__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>InactiveIndemnityGuarantee</externalName>
    <label>Inactive Indemnity Guarantee</label>
    <pluralLabel>Inactive Indemnity Guarantees</pluralLabel>
</CustomObject>