force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Bank Guarantee amount</description>
    <externalDeveloperName>Amount</externalDeveloperName>
    <label>Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>