force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Expiry date of Bank Guarantee</description>
    <externalDeveloperName>ExpiryDate</externalDeveloperName>
    <label>Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>