force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/fields/Indemnity_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Guarantee__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Associated Id of IG</description>
    <externalDeveloperName>GuaranteeId</externalDeveloperName>
    <label>Indemnity Guarantee</label>
    <length>18</length>
    <referenceTo>Indemnity_Guarantee__x</referenceTo>
    <relationshipLabel>Inactive Indemnity Guarantees</relationshipLabel>
    <relationshipName>Inactive_Indemnity_Guarantees</relationshipName>
    <type>ExternalLookup</type>
</CustomField>