force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/fields/Purpose_Code__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Purpose Code</description>
    <externalDeveloperName>PurposeCode</externalDeveloperName>
    <label>Purpose Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>