force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Serial Number</description>
    <externalDeveloperName>SerialNumber</externalDeveloperName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>