force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Starting date of Bank Guarantee</description>
    <externalDeveloperName>StartDate</externalDeveloperName>
    <label>Start Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>