force-app/main/default/objects/Inactive_Indemnity_Guarantee__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Type</description>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>